working_on_final_draft

--- a/about.html
+++ b/about.html
@@ -22,32 +22,33 @@
        <h1>About the programmers who made this site.</h1>
      </div>
      <main>
-     <div id="who_are_we">
+     <!-- <div id="who_are_we">
        <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
-    </div>
+    </div> -->
 
+    <img src="assets/imgs/john-grillo-fresh.jpg" alt="" style="width:150px;height:150px;" id="johnpic">
    <div id="john">
      <h2>John</h2>
-     <img src="assets/imgs/john-grillo-fresh.jpg" alt="">
-     <p>JOHN GRILLO BIO
+     <p><font size="2">
 	John Grillo has been developing websites and web applications since the mid 90's. “Back then, Space Jam was quite literally the coolest website ever. It's an internet relic, now, but my god did it inspire me...to be better so I could charge 3x as much as whatever the WB paid that guy for.”
 	John Grillo has ample experience in JavaScript (and libraries including jQuery, Angular and node.js), HTML5, CSS3 as well as various flavors of SQL.  “MSSQL/TSQL is my favorite. It is more stable than MySQL.”
 	John Grillo is an alumni of Pacific University in Forest Grove and has been enrolled in PSU and PCC as well. “I'm taking CodeFellows as a fun refresher course. I have to say that there have been some surprisingly challenging aspects of it. I'm impressed. My favorite project to date has to be the KidsMathGame. I can think of no better way of rebuilding a portfolio, if you have to, than taking a software developer's bootcamp.”
 	John Grillo is an Eagle Scout in the Boy Scouts of America. “My project was using natural predators to control the mosquito population. Mosquitos love lactic acid and carbon dioxide. Guess who whas those in abundance? Athletes! Hillsboro made a stadium next to sizeable bodies of stagnant water. I knew nothing but I knuckled down, did the research and made sure the predators, swallows [EDIT: It is unclear if the they were Mongolian or European].”
 	When not saving the world, John Grillo likes to spend his time playing basketball, exploring the Pacific NW and working on his short stories and novels. “It's a book of ghost stories for ghosts. It is called “Phantasmagoria: The Dream Pageant”.”
-     </p>
+      </font></p>
    </div>
 
+   <img src="assets/imgs/martin-pelayo.jpg" alt="" style="width:150px;height:150px;" id="martinpic">
    <div id="martin">
      <h2>Martin</h2>
-      <img src="assets/imgs/martin-pelayo.jpg" alt="" style="width:200px;height:200px;">
-     <p>In order to keep his vow, Martin traveled the world in order to learn from the
+     <p><font size="2">
+       In order to keep his vow, Martin traveled the world in order to learn from the
         best martial artists, criminologists, psychologists and others to prepare himself
          for his calling. After completing his preparations, he returned to Gotham where
           he quickly learned he needed to become the bat in order to complete his mission.
            Under the cape and cowl, he now patrols the streets of Gotham.
            With the help of his sidekicks HTML, CSS and Javascript, Gotham now has a new hero.
-     </p>
+     </font></p>
    </div>
 
 
