--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
       <a href="resources.html">Recources</a>
       <a href="about.html">About us</a>
       <a href="other_input.html">Make your complaints here.</a>
-     <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
+     <h1>The amazing math game!</h1>
    </div>
    <main>
-     <h2>discription/instructions concearning the game...bla bla bla.</h2>
+     <div id="gamediscription">
+     <h2>This game will test your arithmatic skills.</h2>
+     <h2>Each question is timed, so be quick. </h2>
+     <h2>Enter you username, and difficulty levels to begin.</h2>
+   </div>
 
      <form id="form">
        <h2>Enter your username to start playing</h2>
